# wires

./: stack.yaml  wires.cabal
Control/Wire/: Internal.hs  Utils.hs
examples/: ping-pong.hs
