name:     wires
version:  0.2.1
category: Control, FRP
synopsis: Functional reactive programming library

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2017 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/wires
bug-reports:  https://github.com/esoeylemez/wires/issues
license:      BSD3
license-file: LICENSE

description:  Functional reactive programming library.

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/wires.git

library
    build-depends:
        base >= 4.8 && < 5,
        deepseq,
        mtl,
        profunctors,
        semialign,
        semigroupoids,
        these
    default-language: Haskell2010
    ghc-options: -W
    exposed-modules:
        Control.Wire
        Control.Wire.Controller
        Control.Wire.Core
        Control.Wire.Internal
        Control.Wire.Trans
        Control.Wire.Utils
        Control.Wire.Varying

executable wires-feedback
    build-depends:
        base >= 4.8 && < 5,
        wires
    default-language: Haskell2010
    ghc-options: -threaded -fdefer-typed-holes
    hs-source-dirs: examples
    main-is: feedback.hs

executable wires-ping-pong
    build-depends:
        base >= 4.8 && < 5,
        clock,
        containers,
        profunctors,
        wires
    default-language: Haskell2010
    ghc-options: -threaded -fdefer-typed-holes
    hs-source-dirs: examples
    main-is: ping-pong.hs
    other-modules: Utils
